@@ -15,6 +15,7 @@ Revision history for FusionInventory::Agent
        * Update the Inventory XML documentation
        * HPUX: use NAME instead of TYPE to set the CPU name (Yanick Durant)
          http://forum.fusioninventory.org/viewtopic.php?id=278
+       * Document NETWORKS/{BSSID,SSID}
 
 2.1.8_rc1  Sat, 05 Mar 2011 14:56:58 +0100
        * Linux, correctly read the number of core from /proc/cpuinfo
